# weston

./: .gitlab-ci.yml  CONTRIBUTING.md  README.md  meson.build  meson_options.txt  releasing.md  weston.ini.in
.gitlab-ci/: build-deps.sh  debian-install.sh  leak-sanitizer.supp
.gitlab-ci/virtme-scripts/: per-test-asan.sh  run-weston-tests.sh
clients/: calibrator.c  cliptest.c  constraints.c  content_protection.c  desktop-shell.c  dnd.c  eventdemo.c  fullscreen.c  gears.c  ivi-shell-user-interface.c  keyboard.c  meson.build  nested-client.c  nested.c  presentation-shm.c  screenshot.c  simple-damage.c  simple-dmabuf-drm.c  simple-dmabuf-egl.c  simple-dmabuf-feedback.c  simple-dmabuf-v4l.c  simple-egl.c  simple-pointer.c  simple-shm.c  simple-touch.c  stacking.c  subsurfaces.c  terminal.c  touch-calibrator.c  transformed.c  window.c  window.h
compositor/: cms-colord.c  config-helpers.c  main.c  meson.build  screen-share.c  text-backend.c  weston-private.h  weston-screenshooter.c  weston.h  xwayland.c
data/: meson.build
desktop-shell/: exposay.c  input-panel.c  meson.build  shell.c  shell.h
doc/sphinx/: conf.py.in  doxygen.ini.in  index.rst  meson.build
doc/sphinx/toc/: meson.build  running-weston.rst  test-suite.rst
doc/sphinx/toc/libweston/: log.rst
fullscreen-shell/: fullscreen-shell.c  meson.build
include/libweston/: backend-drm.h  backend-fbdev.h  backend-headless.h  backend-pipewire.h  backend-rdp.h  backend-vnc.h  config-parser.h  desktop.h  libweston.h  matrix.h  meson.build  shell-utils.h  timeline-object.h  weston-log.h  xwayland-api.h
include/libweston-desktop/: libweston-desktop.h
ivi-shell/: hmi-controller.c  ivi-layout-export.h  ivi-layout-private.h  ivi-layout-shell.h  ivi-layout.c  ivi-shell.c  ivi-shell.h  meson.build
kiosk-shell/: kiosk-shell-grab.c  kiosk-shell.c  kiosk-shell.h  meson.build  util.c
libweston/: animation.c  backend.h  bindings.c  color-noop.c  color.c  color.h  compositor.c  content-protection.c  data-device.c  dbus.c  drm-formats.c  gl-borders.c  gl-borders.h  input.c  launcher-direct.c  launcher-impl.h  launcher-libseat.c  launcher-logind.c  launcher-util.c  launcher-weston-launch.c  libinput-device.c  libinput-device.h  libinput-seat.c  libinput-seat.h  libweston-internal.h  linux-dmabuf.c  linux-dmabuf.h  log.c  meson.build  noop-renderer.c  output-capture.c  output-capture.h  pixel-formats.c  pixel-formats.h  pixman-renderer.c  pixman-renderer.h  screenshooter.c  timeline.c  timeline.h  touch-calibration.c  (+9 more)
libweston-desktop/: client.c  internal.h  libweston-desktop.c  meson.build  surface.c  xdg-shell-v6.c  xdg-shell.c  xwayland.c
libweston/backend-drm/: drm-gbm.c  drm-internal.h  drm-virtual.c  drm.c  fb.c  kms-color.c  kms.c  libdrm-updates.h  meson.build  modes.c  state-helpers.c  state-propose.c
libweston/backend-fbdev/: fbdev.c  meson.build
libweston/backend-headless/: headless.c  meson.build
libweston/backend-pipewire/: pipewire.c
libweston/backend-rdp/: meson.build  rdp.c  rdp.h  rdpclip.c  rdpdisp.c  rdputil.c
libweston/backend-vnc/: meson.build  vnc.c
libweston/backend-wayland/: meson.build  wayland.c
libweston/backend-x11/: meson.build  x11.c
libweston/color-lcms/: color-curve-segments.c  color-curve-segments.h  color-lcms.c  color-lcms.h  color-profile.c  color-transform.c  meson.build
libweston/dbus/: meson.build
libweston/desktop/: client.c  internal.h  libweston-desktop.c  seat.c  surface.c  xdg-shell-v6.c  xdg-shell.c  xwayland.c
libweston/renderer-gl/: egl-glue.c  fragment.glsl  gl-renderer-internal.h  gl-renderer.c  gl-renderer.h  gl-shader-config-color-transformation.c  gl-shaders.c  meson.build  vertex.glsl
libweston/shell-utils/: shell-utils.c
man/: meson.build  weston-bindings.man  weston-drm.man  weston-rdp.man  weston-vnc.man  weston.ini.man  weston.man
pipewire/: meson.build  pipewire-plugin.c
protocol/: ivi-application.xml  meson.build  weston-screenshooter.xml  weston-test.xml
remoting/: meson.build  remoting-plugin.c
shared/: cairo-util.c  cairo-util.h  config-parser.c  frame.c  helpers.h  matrix.c  meson.build  os-compatibility.c  process-util.c  process-util.h  shell-utils.c  shell-utils.h  string-helpers.h  weston-assert.h  weston-drm-fourcc.h  weston-egl-ext.h  xalloc.h  xcb-xwayland.c  xcb-xwayland.h
shell-utils/: meson.build  shell-utils.c  shell-utils.h
subprojects/: neatvnc.wrap
tests/: alpha-blending-test.c  assert-test.c  bad-buffer-test.c  buffer-transforms-test.c  color-icc-output-test.c  color-lcms-optimizer-test.c  color-manager-test.c  color-metadata-errors-test.c  color-metadata-parsing-test.c  color-shaper-matrix-test.c  color_util.c  color_util.h  config-parser-test.c  constraints-test.c  custom-env-test.c  devices-test.c  drm-formats-test.c  drm-smoke-test.c  drm-writeback-screenshot-test.c  event-test.c  internal-screenshot-test.c  iterate-debug-scopes-test.c  ivi-layout-test-client.c  ivi-layout-test-plugin.c  ivi-shell-app-test.c  keyboard-test.c  lcms_util.c  lcms_util.h  linux-explicit-synchronization-test.c  matrix-transform-test.c  meson.build  output-capture-protocol-test.c  output-damage-test.c  output-decorations-test.c  output-transforms-test.c  paint-node-test.c  pointer-shot-test.c  pointer-test.c  presentation-test.c  roles-test.c  (+24 more)
xwayland/: dnd.c  launcher.c  meson.build  selection.c  window-manager.c  xwayland-internal-interface.h  xwayland.h
